# mysql_connector_proto

./: build.sh  makefile  readme.txt  restart.sh  task.txt
share_proto/: db_data.proto
src/: CMakeLists.txt  config.h  db_proxy.cc  db_proxy.h  db_proxy_test.cc  main.cc
src/proto/: build.sh  types.proto
src/test/: mysql_connecter.cc  mysql_connecter.h
src/utility/: logFile.cpp  logFile.h  typedef.h
vs/: vs.sln
vs/vs/: vs.vcxproj  vs.vcxproj.filters
